Generate All Artefacts for Coverage Evaluation AccessAnalysis CodeQL